Update 0.4: New note diagram.md

--- a/0.4: New note diagram.md
+++ b/0.4: New note diagram.md
@@ -1,32 +1,32 @@
 ```mermaid
 sequenceDiagram
-    participant browser
-    participant server
+    participant Browser
+    participant Server
 
-    browser->>server: POST /new_note
-    activate server
-    Note right of server: Server processes the form data and adds a new note
-    server-->>browser: HTTP 302 Redirect to /notes
-    deactivate server
+    Browser->>Server: POST /new_note
+    activate Server
+    Note right of Server: Server processes the form data and adds a new note
+    Server-->>Browser: HTTP 302 Redirect to /notes
+    deactivate Server
 
-    browser->>server: GET /notes
-    activate server
-    server-->>browser: HTML document
-    deactivate server
+    Browser->>Server: GET /notes
+    activate Server
+    Server-->>Browser: HTML document
+    deactivate Server
 
-    browser->>server: GET /main.css
-    activate server
-    server-->>browser: CSS file
-    deactivate server
+    Browser->>Server: GET /main.css
+    activate Server
+    Server-->>Browser: CSS file
+    deactivate Server
 
-    browser->>server: GET /main.js
-    activate server
-    server-->>browser: JavaScript file
-    deactivate server
+    Browser->>Server: GET /main.js
+    activate Server
+    Server-->>Browser: JavaScript file
+    deactivate Server
 
-    browser->>server: GET /data.json
-    activate server
-    server-->>browser: JSON data of notes
-    deactivate server
+    Browser->>Server: GET /data.json
+    activate Server
+    Server-->>Browser: JSON data of notes
+    deactivate Server
 
 ```
