--- a/0.5: Single page app diagram.md
+++ b/0.5: Single page app diagram.md
@@ -1,29 +1,29 @@
 ```mermaid
   sequenceDiagram
-    participant browser
-    participant server
+    participant Browser
+    participant Server
 
-    browser->>server: GET /spa
-    activate server
-    server-->>browser: HTML document
-    deactivate server
+    Browser->>Server: GET /spa
+    activate Server
+    Server-->>Browser: HTML document
+    deactivate Server
 
-    browser->>server: GET /main.css
-    activate server
-    server-->>browser: CSS file
-    deactivate server
+    Browser->>Server: GET /main.css
+    activate Server
+    Server-->>Browser: CSS file
+    deactivate Server
 
-    browser->>server: GET /spa.js
-    activate server
-    server-->>browser: JavaScript file (spa.js)
-    deactivate server
+    Browser->>Server: GET /spa.js
+    activate Server
+    Server-->>Browser: JavaScript file (spa.js)
+    deactivate Server
 
-    Note right of browser: The browser starts executing the JavaScript code (spa.js) that fetches the notes data from the server
+    Note right of Browser: The Browser starts executing the JavaScript code (spa.js) that fetches the notes data from the Server
 
-    browser->>server: GET /data.json
-    activate server
-    server-->>browser: JSON data of notes
-    deactivate server
+    Browser->>Server: GET /data.json
+    activate Server
+    Server-->>Browser: JSON data of notes
+    deactivate Server
 
-    Note right of browser: The browser executes the callback function that renders the notes using the fetched JSON data
+    Note right of Browser: The Browser executes the callback function that renders the notes using the fetched JSON data
 ```
